codex-rs/tui/src/chatwidget/tests/snapshots/codex_tui__chatwidget__tests__computer_activity_tests__computer_activity_keeps_reasoning_in_order_live_and_replayed.snap
---
source: tui/src/chatwidget/tests/computer_activity_tests.rs
assertion_line: 116
expression: "outputs[0]"
---
Compact:
• Called cua_repl.js({"title":"Inspect page 1","code":"await cua.getState()"})
  └ Full output for 1

• Inspecting action 1

• Checking action 1
• Called cua_repl.js({"title":"Inspect page 2","code":"await cua.getState()"})
  └ Full output for 2

• Inspecting action 2

• Checking action 2

Expanded:
• Called cua_repl.js({"title":"Inspect page 1","code":"await cua.getState()"})
  └ Full output for 1

• Inspecting action 1

• Checking action 1
• Called cua_repl.js({"title":"Inspect page 2","code":"await cua.getState()"})
  └ Full output for 2

• Inspecting action 2

• Checking action 2

Raw:
• Called cua_repl.js({"title":"Inspect page 1","code":"await cua.getState()"})
  └ Full output for 1
• Called cua_repl.js({"title":"Inspect page 2","code":"await cua.getState()"})
  └ Full output for 2
