codex-rs/tui/src/chatwidget/tests/snapshots/codex_tui__chatwidget__tests__computer_activity_tests__computer_activity_partial_interruption.snap
---
source: tui/src/chatwidget/tests/computer_activity_tests.rs
expression: "lines_to_single_string(&cells[0])"
---
• Called cua_repl.js({"title":"Inspect page 1","code":"await cua.getState()"})
  └ Error: interrupted
• Called cua_repl.js({"title":"Inspect page 2","code":"await cua.getState()"})
  └ Full output for 2
