codex-rs/tui/src/chatwidget/tests/snapshots/codex_tui__chatwidget__tests__computer_activity_tests__computer_activity_replayed.snap
---
source: tui/src/chatwidget/tests/computer_activity_tests.rs
expression: "lines_to_single_string(&outputs[0].0)"
---
• Called cua_repl.js({"title":"Inspect page 1","code":"await cua.getState()"})
  └ Full output for 1
• Called cua_repl.js({"title":"Inspect page 2","code":"await cua.getState()"})
  └ Full output for 2
• Called cua_repl.js({"title":"Inspect page 3","code":"await cua.getState()"})
  └ Full output for 3
• Called cua_repl.js({"title":"Inspect page 4","code":"await cua.getState()"})
  └ Full output for 4
